# openfrontpro

./: .gitignore  .gitmodules  flake.nix  game_example_1.json  getmatches.fish  listmatches.fish  maps.txt  matches.txt  matcheserror.txt  package.json
rust/: Cargo.toml  flake.nix
rust/.sqlx/: query-011bd2e65f8fabe191f5d2db914b55f83870e5807653f37d61f8509d4237f476.json  query-04b42dc445fa937fb6e66d3acfd38c09f47b539d67622c41e085d7a76e4e3911.json  query-051e9e6a5cb0a5459414e885643d6560e53a962153f969515f846f6b88d940c1.json  query-0c6533523540af1daf29d0045ab2fb8ab1238346ac3608bebbd78c3f8290fb52.json  query-0cd2325c756c57d32de9c7761baccfd16b1e68300196e17824a9d36a26138728.json  query-123f9cfbdf2ea470de528c5dafe729500d3145cb7c125e22de0ae76dbc917079.json  query-12b120fd948e61de1507114321621730feff1433513aa2791715305f17029a26.json  query-134a409cefc1df78a83fa32c94dc83a75d8a0e011200879eb4eb7fb53efc33e9.json  query-15d804f10f54dfcd99df9ee3ef5046f67704354256cb0e5a6d0ce4933e381573.json  query-1a61939b457cab9620c5bf91556106cdf420f566ad476430dd55ac421af5d970.json  query-1baeffa4981aaf8c37c94daf0db57dd894bafb5e1cd41b5117e6919d1b630106.json  query-1ce42049c9eef0af02e4e0bdb7d77fba7a33cfa8fdf6980f7e91d25ea7fe0dca.json  query-239c09c374c7046f3fb24f2a239993d5016b269deeadb2d6be9efeaa4089f3ee.json  query-292b75e56200767167d2d701966b5b055731e7b6901bc53f7857dbb2a4e54b6e.json  query-2ac7dad15e980479ee5f15a919481ec391e232ac9693109d43bcba046f9ad1e6.json  query-3116b77d103386204c5f1c47fddb6d6bee11cb134af0c92278cf244404a51e33.json  query-331ebd6159107412e570bdd7b3f6213b1cd617dab271c02c6d93d829ecba0fc3.json  query-344e5ccc8dcada4ebad002d5235be674e3408a17a5665b3641ea07211b896632.json  query-346b925df4dd2152c4cdb113e1bb48047e4fc52b704f8a3ab08c2c2df06f2a06.json  query-3af96c2ed1ec80c06da201acf5225a2229fe5af1b1bc169d8a5691f7593d13e6.json  query-3bc26b5d468fda6c2aabf3113d4d28f54dec4659d85a642487cfefb07badfb5d.json  query-464d64fb4acaa9ffe87dcaeb32f3da4f0300494af5b78bfa9c455e888239ff63.json  query-4bd05e02dcb28073e904c0c766474aae15a4c371c760fc84ceb5bcd0274c6d15.json  query-4e7d890feabe89fa24f7df9d22af944f0766e13fa7db79b9f1921a068d5e6ca2.json  query-54102e86122fc6114fcb7492425542db388d96113eb7d3abd942c83e2e81a7d1.json  query-5c1a06fac0a9627b9932c326029b6943b6c03f64b9810b889377622e307367d1.json  query-5e956a6e49dc931c5a4ae1468d6c2b0603cf7f1f610a8fd4c3c346383e95233a.json  query-5ef7ca161b7bfb9419e21fe9ddd7d1e16035d701f74e078a2161a204ac5d4d85.json  query-66ff95e16f3a3109105e88bd498ee586a751946bc3d23349360c8d96a50729ea.json  query-6803dc1370202b291b72e3f24fd8b5bbfb3c440371b4ba4789ef601a49e5d931.json  query-708a9dab5dbe15be108d1df3dcf846b362a3b81b2ed3a9d9c5377493dc5bedfa.json  query-70976adff3f96df3eab0eb61c34b8d328e400cba9bb4dca055070976c876bcc6.json  (+30 more)
rust/frontend/: bun.nix  bunfig.toml  default-yarn.nix  (+5 more)
(+141 files in other folders)
